Creado mediante Colaboratory

--- a/Proyecto_Chocolate.ipynb
+++ b/Proyecto_Chocolate.ipynb
@@ -30,6 +30,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## **PROYECTO INTELIGENCIA ARTIFICIAL - Juan Camilo Paz y Juan José Pinilla**"
+      ],
+      "metadata": {
+        "id": "KMqH4eFMe_94"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **CHOCOLATE RATINGS PREDICTION**"
+      ],
+      "metadata": {
+        "id": "MQ-UI6M2gsJp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **1.**"
       ],
       "metadata": {
@@ -38,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "sAi16fVCV4dA"
       },
@@ -121,7 +139,7 @@
       "metadata": {
         "id": "03QH7W-qWUFv"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +156,7 @@
         "id": "J7al5tL0Wv1H",
         "outputId": "cd99281c-8aa7-4d06-a510-94ebc88ced90"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +366,7 @@
         "id": "fHFiliB3XBbO",
         "outputId": "6a8b9649-cf55-4dd6-fd91-1f3f0bf5bc6a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +633,7 @@
         "id": "6YO_veFReJYy",
         "outputId": "fb95bdac-a021-4226-9170-11c2d98577ad"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +917,7 @@
         "id": "LfA9pWXl5Ufv",
         "outputId": "3fbd5fc3-e4e1-41f1-f8af-116d1c8c0cb6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1109,7 +1127,7 @@
       "metadata": {
         "id": "Ei5mGJcPpjux"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1437,94 +1455,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#Esta opción realiza un promedio de los datos "
-      ],
-      "metadata": {
-        "id": "KuQVONVFqc41"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#ANTIGUO\n",
-        "\n",
-        "\n",
-        "#Optimización de hiperparámetros: \n",
-        "\n",
-        "#k_range = range(1,50)\n",
-        "#algoritmo = [\"auto\", \"ball_tree\", \"kd_tree\", \"brute\"]\n",
-        "#distance_prueba = [\"euclidean\",\"manhattan\",\"chebyshev\",\"minkowski\"]\n",
-        "#weight_prueba = [\"uniform\",\"distance\"]\n",
-        "#scores = []\n",
-        "#hiperparametros=[]\n",
-        "\n",
-        "#for algo in algoritmo:\n",
-        "#  for dist in distance_prueba:\n",
-        "#    for w in weight_prueba:\n",
-        "#      for k in k_range:\n",
-        "#          knn = KNeighborsClassifier(n_neighbors = k,weights=w,metric=dist, metric_params=None,algorithm=algo)\n",
-        "#          #knn = KNeighborsClassifier(n_neighbors = k)\n",
-        "#          knn.fit(X_train2, y_train2)\n",
-        "#          scores.append(r2_score(y_test2, knn.predict(X_test2)))\n",
-        "#          hiperparametros.append((k,w,dist,algo))\n",
-        "#plt.figure()\n",
-        "#plt.xlabel('Iteración')\n",
-        "#plt.ylabel('R2')\n",
-        "#plt.plot(scores)\n",
-        "#indice=np.argmax(scores)\n",
-        "#print(hiperparametros[indice])\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "EIhWwfR31liq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#ANTIGUO\n",
-        "# Prueba usando los hiperparametros optimizados\n",
-        "#KNN = KNeighborsClassifier(n_neighbors = 26,weights='uniform',metric='manhattan', metric_params=None,algorithm='auto')\n",
-        "\n",
-        "#KNN.fit(X_train2, y_train2)\n",
-        "#y_test_predicted = KNN.predict(X_test2)\n",
-        "#y_test_scores = KNN.predict_proba(X_test2)\n",
-        "#R2 = r2_score(y_test2, y_test_predicted)\n",
-        "#print(\"Coeficiente de Correlación R2=\", R2)\n",
-        "#ACC = accuracy_score(y_test2, y_test_predicted)\n",
-        "#print(\"Accuracy\", ACC)"
-      ],
-      "metadata": {
-        "id": "KUIvefM7i1Jx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#ANTIGUO\n",
-        "#Cross-validation\n",
-        "#KNN = KNeighborsClassifier(n_neighbors = 26,weights='uniform',metric='manhattan', metric_params=None,algorithm='auto')\n",
-        "#scores = cross_val_score(KNN, X, y, cv=5, scoring='r2')\n",
-        "#print(scores)\n",
-        "#print(\"en total se tiene un R2 = %0.2f  con una desviación estandar de %0.2f usando %d-plieges\" % (scores.mean(), scores.std(),len(scores)))\n",
-        "\n",
-        " #scores = cross_val_score(knn, knn.predict(X_test2), y_test2, cv=5, scoring='r2')"
-      ],
-      "metadata": {
-        "id": "dlr-W38B8aQA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# **KNN**"
@@ -1751,7 +1681,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "COMPARACIÓN MODELOS, INTENTO\n"
+        "COMPARACIÓN MODELOS\n"
       ],
       "metadata": {
         "id": "fhx0imusLsrv"
